# CloudBox

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/cli/: CLIParser.cpp
src/core/: IHypervisor.h  VmManager.cpp  VmManager.h
src/include/: CLIParser.h  HyperVController.h  IHypervisor.h  QemuController.h  VmManager.h
src/platform/linux/: QemuController.cpp
src/platform/windows/: HyperVController.h
